<resources>
    <string name="hello">Hello World, DemoActivity!</string>
    <string name="app_name">Tesco</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="user_name">Email Address</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_submit">Submit</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="amending_order">Amending Order</string>
    <string name="no_user_msg">Please enter the username.</string>
    <string name="no_pwd_msg">Please enter the password.</string>
    <string name="spin_loading">Loading...</string>
    <string name="delivery_loading">Loading delivery slots...</string>
    <string name="booking_loading">Booking slot...</string>
    <string name="spin_wait">Please wait...</string>
    <string name="no_event_type">Please enter a event type</string>
    <string name="reg_link">Please sign in above or register <a href="http://www.tesco.com/groceries"> <b>here</b> </a></string>
    <string name="add_item">Add item</string>
    <string name="title">Tesco</string>
    <string name="login">Login</string>
    <string name="shop_list_title">Shopping List</string>
    <string name="demo_desc">" Tap any item to search for it in the shop. "<FONT COLOR="#C850A5">(Tap and hold an item to manage your list)</FONT></string>
    <string name="remove_item_msg">Remove item?</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="remove_favorite_msg">Would you like to remove this product from your Favourites?</string>
    <string name="remove_all">Remove All</string>
    <string name="remove_tick">Remove Ticked</string>
    <string name="tick_all">Tick all</string>
    <string name="untick_all">Untick All</string>
    <string name="sign_in">Logging In....</string>
    <string name="unsucesslogin_msg">"Oops! We couldn't sign you in. Please try again."</string>
    <string name="unsucesslogin_title">Sign-in unsuccessful</string>
    <string name="unsucesslogin_610_msg">Your username or password is incorrect. Please check and try again.</string>
    <string name="try_btn">Try again</string>
    <string name="no_deliveryslot">Book a slot</string>
    <string name="scan">Scan</string>
    <string name="favorites">Favourites</string>
    <string name="shop">Shop</string>
    <string name="basket">Basket</string>
    <string name="no_pendingorders">No pending orders</string>
    <string name="checkout">Checkout</string>
    <string name="settings">Settings</string>
    <string name="menu_deliveryslot">Delivery slots</string>
    <string name="menu_pendingorders">Pending orders</string>
    <string name="signout">Sign Out</string>
    <string name="listview">List View</string>
    <string name="gridview">Grid View</string>
    <string name="clearhistory">Clear History</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_msg">Nice to see you again!</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="pound">£</string>
    <string name="deliveryslot">Slot booked</string>
    <string name="collectionslot">Collection booked</string>
    <string name="pending_order_one">Pending order</string>
    <string name="pending_orders">Pending orders</string>
    <string name="in_basket">in basket</string>
    <string name="booked">Booked</string>
    <string name="book">Book</string>
    <string name="delivery_slot_header">Delivery Slots</string>
    <string name="all_tab">All</string>
    <string name="offer_tab">Offers</string>
    <string name="add_btn">Add</string>
    <string name="remove_btn">Remove</string>
    <string name="unavailable_btn">unavailable</string>
    <string name="loadingproduct">Loading products...</string>
    <string name="unsucessful_delslot_internet_msg">"Network unavailable. 
 Please try again."</string>
    <string name="unsucessful_delslot_other_msg">"There's been a problem retrieving information."</string>
    <string name="delslot_unavailable_msg">It looks like that delivery slot is no longer available</string>
    <string name="unsucessful_booking_deliveryslot_title">"We couldn't book your slot"</string>
    <string name="unsucessful_loading_deliveryslot_title">"We couldn't load the delivery slots"</string>
    <string name="book_btn">Book later</string>
    <string name="load_btn">Load later</string>
    <string name="home">Home</string>
    <string name="success_booked_msg">Your delivery slot is reserved for two hours until %1$s.</string>
    <string name="success_booked_title">Reservation Successful</string>
    <string name="conn_err_lbl">Connection error</string>
    <string name="from_lbl">From £</string>
    <string name="unable_book_slot">Unable to book delivery slots</string>
    <string name="unsuccessful_departments_title_msg">"We couldn't load the list"</string>
    <string name="remove_lbl">Remove</string>
    <string name="update_lbl">Updating</string>
    <string name="remove_all_msg">Remove all items?</string>
    <string name="add_remove_error_msg">"We couldn't add/remove item"</string>
    <string name="try_later_btn">Try later</string>
    <string name="product_notavail_lbl">You have no products right now.</string>
    <string name="tryagain_msg">Please try again</string>
    <string name="unavailable_lbl">UNAVAILABLE:</string>
    <string name="why_not_try">is currently un available why not to try</string>
    <string name="signin_lb">Sign in here</string>
    <string name="whynottry_lbl">is currently unavailable.</string>
    <string name="whynottry_lbl_land">is currently unavailable.</string>
    <string name="connection_max_limit">"Please Wait... 
 Updating your basket."</string>
    <string name="freshfood_lbl">Fresh Food</string>
    <string name="bakery_lbl">Bakery</string>
    <string name="foodcupboard_lbl">Food Cupboard</string>
    <string name="frozenfood_lbl">Frozen Food</string>
    <string name="drinks_lbl">Drinks</string>
    <string name="baby_lbl">Baby</string>
    <string name="healthbeauty_lbl">Health &amp; Beauty</string>
    <string name="pets_lbl">Pets</string>
    <string name="household_lbl">Household</string>
    <string name="home_ents_lbl">Home &amp; Ents</string>
    <string name="guideprice_lbl">Guide Price:</string>
    <string name="servicecharge_lbl">Service Charge:</string>
    <string name="servicecharge_calc_lbl">Savings calculated at checkout</string>
    <string name="basket_fail_msg">Failed to get response Unable to retrieve basket. Add a product to the basket then try again.</string>
    <string name="basket_fail_title">Basket Error</string>
    <string name="basket_empty_title">Your basket is empty.</string>
    <string name="basket_empty_msg">You need to add some items before you can see your basket.</string>
    <string name="no_item_basket_title">No items in your basket</string>
    <string name="no_item_basket_msg">"You've got no items in your basket, so there's nothing to check out just yet. Go to"</string>
    <string name="no_item_basket">"You've got no items in your basket. Go to"</string>
    <string name="or_lbl">or</string>
    <string name="bookslot_lbl">Book a Slot</string>
    <string name="shopping_method">CHOOSE YOUR SHOPPING METHOD</string>
    <string name="deliveryslot_title">No delivery slot set</string>
    <string name="deliveryslot_msg">"It looks like you haven't chosen a delivery slot, or the one you have chosen is no longer valid."</string>
    <string name="spin_searching">Searching...</string>
    <string name="unsucessful_searching_msg">"There's been a problem retrieving information."</string>
    <string name="empty_search_title">Did you mean to search for something?</string>
    <string name="empty_search_msg">"You haven't typed anything in the search box"</string>
    <string name="searchtext">Searching</string>
    <string name="search_error_title">Search Error</string>
    <string name="search_error_msg">Search string must be 3 characters or more</string>
    <string name="basket_error_title">Error while retreiving basket</string>
    <string name="basket_error_msg">Unable to retrieve basket(usually happens if new account). Add a product to the basket then try again.</string>
    <string name="try_later">Try later</string>
    <string name="fav_empty_title">Empty Favourites</string>
    <string name="fav_empty_msg">You currently have no Favourites.</string>
    <string name="signin_title">Please sign in first</string>
    <string name="signin_msg">"You'll need to sign in to your account in order to search the shop."</string>
    <string name="timed_out">timed out</string>
    <string name="ntwrk_unrchbl">Network unreachable</string>
    <string name="unbl_rtrv_data">Unable to retrieve basket</string>
    <string name="home_screen">Home Screen</string>
    <string name="empty_search_res_title">No products found</string>
    <string name="empty_search_results">Sorry, we did not find any products matching your search</string>
    <string name="penorder_lbl">Pending Orders</string>
    <string name="tobe_delivered">To be delivered:</string>
    <string name="items_lbl">Order Number:</string>
    <string name="price_lbl">Price:</string>
    <string name="reference_lbl">Reference:</string>
    <string name="amendorder_lbl">Amend Order</string>
    <string name="pending_order_datetime">%1$s %2$s</string>
    <string name="pending_order_time">Between %1$s - %2$s</string>
    <string name="pending_loading">"Loading pending orders
..."</string>
    <string name="unsucessful_loading_pendingorders_title">Unable to get your pending order</string>
    <string name="unsucessful_pendingorders_internet_msg">You may have a poor internet connection at the moment</string>
    <string name="unsucessful_pendingorders_other_msg">"There's been a problem retrieving information."</string>
    <string name="unsucessful_amendorder_title">Amend order</string>
    <string name="unsucessful_amendorder_internet_msg">You may have a poor internet connection at the moment</string>
    <string name="unsucessful_amendorder_other_msg">"Sorry, We couldn't retrieve your order basket."</string>
    <string name="scanner_hint">"Hover above a barcode to scan it, or tap the camera button to take a picture of an item's packaging"</string>
    <string name="desc_historyButton">starts the HistoryActivity</string>
    <string name="desc_capture">capture the last frame and starts local and remote search</string>
    <string name="desc_frozenPreview">invisible layout used for display the last frame when capture button pressed</string>
    <string name="desc_infoButton">starts TutorialActivity</string>
</resources>