<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/camera_main_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.tesco.grocery.view.TGIQScannerPreview android:id="@id/preview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ImageView android:padding="30.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/scan_frame_big" android:scaleType="centerInside" android:layout_centerInParent="true" />
        <ImageView android:id="@id/frozenPreview" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitXY" android:contentDescription="@string/desc_frozenPreview" />
        <LinearLayout android:gravity="center_vertical" android:id="@id/overlay_lay" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <TextView android:textSize="16.0sp" android:typeface="sans" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:background="#55ffffff" android:paddingLeft="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/scanner_hint" android:layout_alignParentBottom="true" />
        <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/product_list" android:background="@*android:color/transparent" android:layout_width="fill_parent" android:layout_height="220.0dip" android:listSelector="@*android:color/transparent" android:stackFromBottom="true" android:divider="#ffbcd3e9" android:dividerHeight="1.0px" android:layout_alignParentBottom="true" android:headerDividersEnabled="false" android:footerDividersEnabled="false" />
        <ImageView android:id="@id/scan_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/scanhistoryhint" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="49.0dip">
        <ImageButton android:id="@id/historyButton" android:background="@drawable/btn_background" android:visibility="invisible" android:clickable="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/icon_scan_show" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/desc_historyButton" />
        <ImageButton android:id="@id/capture" android:background="@drawable/btn_background" android:clickable="true" android:layout_width="148.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_camera" android:scaleType="centerInside" android:layout_centerInParent="true" android:contentDescription="@string/desc_capture" />
        <CheckBox android:id="@id/flashButton" android:visibility="visible" android:layout_width="48.0dip" android:layout_height="48.0dip" android:button="@drawable/icon_scan_flash" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageButton android:id="@id/tutorialButton" android:background="@drawable/btn_background" android:visibility="gone" android:clickable="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_menu_help_holo_light" android:scaleType="centerInside" android:layout_toLeftOf="@id/flashButton" android:layout_centerVertical="true" android:contentDescription="@string/desc_infoButton" />
    </RelativeLayout>
</LinearLayout>